--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
+  "description": "Bot Aternos Discord",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -12,11 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^2.6.0",
-    "@types/node": "^22.13.11",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "node-fetch": "^3.3.2",
     "puppeteer": "^24.32.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
